<resources>
    <string name="app_name">Two Activities</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Message Received</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="text_one">Text One</string>
    <string name="text_two">Text Two</string>
    <string name="text_three">Text Three</string>
    <string name="first_passage">В первые 15 дней года поставки составили 9,1 миллиарда кубометров газа. Германия увеличила закупку газа на 32,1 процента, Италия — на 139,7 процента, Турция — на 8,7 процента, Австрия — на 11,7 процента, Франция — на 51,6 процента, Нидерланды — на 21,2 процента, Польша — 62,6, а Венгрия — на 298,4 процента. Российский трубопроводный газ пока остается лидером в ЕС. Однако общая доля поставок «Газпрома» в европейском потреблении упала с 36 процентов в 2019 году до 33 процентов в 2020-м. Чтобы удержать долю рынка Западной Европы, российский газовый монополист почти в два раза увеличил продажи на своей электронной торговой площадке. Холодная зима и ситуация со сжиженным природным газом (СПГ) привела к тому, что европейским покупателям понадобился и каменный уголь в большом объеме. Стоимость тонны в регионе взлетела до 70 долларов (на 23 процента с конца ноября).</string>
    <string name="second_passage">Власти Москвы допускают вероятность возникновения в городе еще одной волны коронавируса, при этом сейчас ситуация стабильная. Об этом заявила заместитель мэра столицы Анастасия Ракова, сообщает РИА Новости в пятницу, 15 января. «Исключить еще одну волну мы не можем, с учетом прошедших новогодних праздников и с тем, как развивается ситуация», — заявила она журналистам. Ранее 15 января сообщалось, что в Москве за последние 24 часа выявили 81 летальный исход от коронавируса. Это максимальный суточный показатель в столице с начала пандемии. Также 15 января стало известно о начале работы на следующей неделе в Москве шести выездных пунктов вакцинации от коронавируса.</string>
    <string name="third_passage">Умер один из основателей и гитарист американской рок-группы New York Dolls Сильвен Сильвен. Информация об этом появилась на его странице в Facebook. «Как многие из вас знают, Сильвен боролся с раком последние два с половиной года. Хотя он доблестно сражался, вчера он скончался от этой болезни. Мы скорбим о потере и знаем, что он наконец нашел покой и избавился от боли. Включите его музыку, зажгите свечу, помолитесь, и давайте отправим эту красивую куклу в путь», — говорится в публикации. Музыкант скончался 13 января. Ему было 69 лет. Сильвен родился в Каире в 1951 году, эмигрировал с семьей во Францию, а затем в Нью-Йорк. После переезда в США он руководил компанией по производству одежды и создал группу Actress, которая после прихода фронтмена Дэвида Йохансена в 1971 году была переименована в New York Dolls. Музыканты были одними из первых представителей глэм-рока в истории и записали два культовых альбома New York Dolls и Too Much Too Soon.</string>
</resources>